--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
+//developmemt.env
+NODE_ENV=development
 HOST = '34.101.171.180'
 USER = 'root'
 PASSWORD = 'ArtjunaBisa'
-PORT = 5000
+PORT = 8080
 TZ = 'Asia/Jakarta'
+
