--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemon": "^2.0.16"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "dev": "set NODE_ENV=development&& nodemon app.js",
+    "prod": "set NODE_ENV=production&& node app.js"
   },
   "keywords": [],
   "author": "",
