--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
           port: 22
           script: |
             cd
+            cp .env NodeJS-Backend-API  
+            cd NodeJS-Backend-API
             git pull origin main
-            cp .env NodeJS-Backend-API            
             pm2 restart artjuna
